# controllers/freelancer.controller.js
@@ -1,6 +1,6 @@
-const Customer = require('../models/customer.model.js');
+const Freelancer = require('../models/freelancer.model.js');
 
-class CustomersController {
+class FreelancersController {
   static async create (req, res) {
     if (!req.body) {
       return res.status(400).send({ errorMessage: 'Content can not be empty!' });
@@ -11,23 +11,23 @@ class CustomersController {
     }
 
     try {
-      const customer = new Customer(req.body);
-      if (await Customer.emailAlreadyExists(customer.email)) {
+      const freelancer = new Freelancer(req.body);
+      if (await Freelancer.emailAlreadyExists(freelancer.email)) {
         res.status(400).send({ errorMessage: 'A customer with this email already exists !' });
       } else {
-        const data = await Customer.create(customer);
+        const data = await Freelancer.create(freelancer);
         res.status(201).send({ data });
       }
     } catch (err) {
       res.status(500).send({
-        errorMessage: err.message || 'Some error occurred while creating the Customer.'
+        errorMessage: err.message || 'Some error occurred while creating the Freelancer.'
       });
     }
   }
 
   static async findAll (req, res) {
     try {
-      const data = (await Customer.getAll()).map(c => new Customer(c)).map(c => ({
+      const data = (await Freelancer.getAll()).map(c => new Freelancer(c)).map(c => ({
         id: c.id,
         name: c.fullName,
         email: c.email,
@@ -36,20 +36,20 @@ class CustomersController {
       res.send({ data });
     } catch (err) {
       res.status(500).send({
-        errorMessage: err.message || 'Some error occurred while retrieving customers.'
+        errorMessage: err.message || 'Some error occurred while retrieving freelancers.'
       });
     }
   }
 
   static async findOne (req, res) {
     try {
-      const data = await Customer.findById(req.params.id);
+      const data = await Freelancer.findById(req.params.id);
       res.send({ data });
     } catch (err) {
       if (err.kind === 'not_found') {
-        res.status(404).send({ errorMessage: `Customer with id ${req.params.id} not found.` });
+        res.status(404).send({ errorMessage: `Freelancer with id ${req.params.id} not found.` });
       } else {
-        res.status(500).send({ errorMessage: 'Error retrieving Customer with id ' + req.params.id });
+        res.status(500).send({ errorMessage: 'Error retrieving Freelancer with id ' + req.params.id });
       }
     }
   }
@@ -60,33 +60,33 @@ class CustomersController {
     }
 
     try {
-      const data = await Customer.updateById(req.params.id, new Customer(req.body));
+      const data = await Freelancer.updateById(req.params.id, new Freelancer(req.body));
       res.send({ data });
     } catch (err) {
       if (err.kind === 'not_found') {
-        res.status(404).send({ errorMessage: `Customer with id ${req.params.id} not found.` });
+        res.status(404).send({ errorMessage: `Freelancer with id ${req.params.id} not found.` });
       } else {
-        res.status(500).send({ errorMessage: 'Error updating Customer with id ' + req.params.id });
+        res.status(500).send({ errorMessage: 'Error updating Freelancer with id ' + req.params.id });
       }
     }
   }
 
   static async delete (req, res) {
     try {
-      await Customer.remove(req.params.id);
-      res.send({ message: 'Customer was deleted successfully!' });
+      await Freelancer.remove(req.params.id);
+      res.send({ message: 'Freelancer was deleted successfully!' });
     } catch (err) {
       if (err.kind === 'not_found') {
         res.status(404).send({
-          message: `Not found Customer with id ${req.params.id}.`
+          message: `Not found Freelancer with id ${req.params.id}.`
         });
       } else {
         res.status(500).send({
-          message: 'Could not delete Customer with id ' + req.params.id
+          message: 'Could not delete Freelancer with id ' + req.params.id
         });
       }
     }
   }
 }
 
-module.exports = CustomersController;
+module.exports = FreelancersController;
